# bendclaw

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  agent.md  build.rs  install.sh  package-lock.json  rust-toolchain.toml  rustfmt.toml
crates/test-harness/: Cargo.toml
crates/test-harness/src/: assertions.rs  lib.rs  replay.rs  rig.rs  setup.rs  snapshot.rs
crates/test-harness/src/mocks/: context.rs  llm.rs  mod.rs  skill.rs
docs/: API.md  (+1 more)
src/app/: Cargo.toml  mod.rs
src/app/agent/: mod.rs  recovery_gate.rs  run_executor.rs  run_planner.rs  session_binding.rs
src/app/result/: event_cursor.rs  mod.rs  result_format.rs  run_event_mapper.rs
src/app/result/formats/: json.rs  sse.rs  stream_json.rs  text.rs
src/app/src/: agent.rs  lib.rs
src/app/src/agent/: agent.rs  convert.rs  event.rs  mod.rs  run_manager.rs  runtime.rs  sandbox.rs  session.rs  types.rs  variables.rs
src/app/src/agent/prompt/: builder.rs  memory.md  memory.rs  mod.rs  plan.md  skill.rs
src/app/src/agent/run/: convert.rs  event.rs  runtime.rs
src/app/src/channel/: mod.rs
src/app/src/channel/feishu/: adapter.rs  config.rs  mod.rs
src/app/src/channel/http/: server.rs
src/app/src/cli/: app.rs  args.rs  cli.rs  context.rs  format.rs  mod.rs  sink.rs
src/app/src/cli/repl/: ask_user.rs  commands.rs  completion.rs  diff.rs  handler.rs  input.rs  interrupt.rs  mod.rs  render.rs  repl.rs  selector.rs  sink.rs  skill_cmd.rs  spinner.rs  transcript_log.rs
src/app/src/conf/: config.rs  load.rs  mod.rs  paths.rs
src/app/src/gateway/: mod.rs  registry.rs  service.rs  types.rs
src/app/src/gateway/channels/: mod.rs
src/app/src/gateway/delivery/: mod.rs  stream.rs  traits.rs
src/app/src/gateway/feishu/: adapter.rs  config.rs  message.rs  mod.rs  outbound.rs  ws.rs
src/app/src/gateway/http/: mod.rs  server.rs
src/app/src/log/: macros.rs  mod.rs  redaction.rs
src/app/src/protocol/: mod.rs
src/app/src/protocol/engine/: mod.rs  runtime.rs  transcript.rs
src/app/src/protocol/model/: mod.rs  run.rs  session.rs  trace.rs  transcript.rs
src/app/src/repl/: mod.rs  render.rs  selector.rs
src/app/src/request/: agent.rs  event.rs  event_codec.rs  events.rs  execute.rs  executor.rs  mod.rs  payload.rs  request.rs  runner.rs  transcript.rs
src/app/src/run/: command.rs  mod.rs  runner.rs  sink.rs  stream.rs
src/app/src/runtime/: mod.rs  service.rs
src/app/src/search/: matcher.rs  mod.rs  session_search.rs
src/app/src/server/: handler.rs  mod.rs  routes.rs  server.rs  stream.rs
src/app/src/session/: load.rs  mod.rs  observability.rs  session.rs  state.rs
src/app/src/storage/: memory.rs  mod.rs  model.rs  storage.rs
src/app/src/storage/fs/: storage.rs
src/app/src/telemetry/: config.rs  exporter.rs  mod.rs  subscriber.rs
src/app/src/tui/: app.rs  mod.rs  sink.rs  state.rs  view.rs
src/app/src/types/: metrics.rs  observability.rs  session.rs  transcript.rs  variables.rs
src/app/tests/: agent_prompt_test.rs  agent_variable_test.rs  ask_user_render_test.rs  cli_args_test.rs  cli_format_test.rs  completion_test.rs  conf_load_test.rs  delivery_test.rs  feishu_message_test.rs  format_test.rs  interrupt_test.rs  markdown_render_test.rs  prompt_test.rs  protocol_test.rs  render_test.rs  repl_ask_user_bridge_test.rs  repl_ask_user_render_test.rs  repl_completion_test.rs  repl_diff_test.rs  repl_markdown_render_test.rs  repl_render_test.rs  repl_skill_cmd_test.rs  repl_spinner_test.rs  repl_transcript_log_test.rs  request_test.rs  run_ask_channel_test.rs  run_test.rs  search_test.rs  server_protocol_test.rs  session_observability_test.rs  session_test.rs  skill_loader_test.rs  spinner_test.rs  storage_memory_test.rs  storage_test.rs  transcript_log_test.rs  types_transcript_stats_test.rs
src/engine/: Cargo.toml
src/engine/src/: agent.rs  agent_loop.rs  context.rs  doom_loop.rs  lib.rs  retry.rs  skills.rs  sub_agent.rs  types.rs
src/engine/src/agent/: agent.rs
src/engine/src/api/: anthropic.rs  client.rs  mod.rs  openai.rs  provider.rs  response.rs  stream.rs
src/engine/src/context/: image_resize.rs  mod.rs  tokens.rs  tracking.rs
src/engine/src/context/compaction/: accounting.rs  compact.rs  mod.rs  orchestrator.rs  outline.rs  pass.rs  phase.rs  sanitize.rs  strategy.rs  types.rs
src/engine/src/loop/: compaction.rs  driver.rs  llm_call.rs
src/engine/src/openapi/: adapter.rs
src/engine/src/provider/: anthropic.rs  azure_openai.rs  bedrock.rs  error.rs  google.rs  google_vertex.rs  http_client.rs  json_repair.rs  mock.rs  mod.rs  model.rs  openai_compat.rs  openai_responses.rs  registry.rs  sse.rs  stream_fallback.rs  stream_http.rs  traits.rs
src/engine/src/tools/: ask_user.rs  bash.rs  edit.rs  file.rs  guard.rs  list.rs  mod.rs  search.rs  validation.rs  web_fetch.rs
src/engine/src/types/: event.rs  llm.rs  message.rs  tool.rs
src/engine/tests/: agent.rs  agent_loop_test.rs  anthropic_fallback_test.rs  api_client_test.rs  compact_property_test.proptest-regressions  compact_property_test.rs  concurrency_safe_test.rs  context.rs  context_test.rs  doom_loop.rs  image_resize.rs  integration_anthropic.rs  openai_compat_fallback_test.rs  provider.rs  skills.rs  stream_http_test.rs  streaming_chain_test.rs  sub_agent_test.rs  tools.rs  tools_test.rs  types.rs
src/engine/tests/agent/: agent.rs  agent_loop.rs  integration_anthropic.rs  run.rs  state.rs
src/engine/tests/context/: compact_property.rs  compaction.rs  compaction_property.proptest-regressions  compaction_property.rs  config.rs  lifecycle.rs  sanitize.rs  tracking.rs
src/engine/tests/fixtures/: agent_harness.rs  compaction_assert.rs  message_dsl.rs
src/engine/tests/helpers/: compact_helpers.rs  mod.rs  provider_helper.rs
src/engine/tests/provider/: bedrock.rs  error.rs  google.rs  json_repair.rs  model.rs  registry.rs  stream_fallback.rs  stream_http.rs
src/engine/tests/tools/: ask_user.rs  bash.rs  disallow.rs  file.rs  guard.rs  list.rs  memory.rs  search.rs  skill.rs  tool_sets.rs  validation.rs  variables.rs  web_fetch.rs
src/napi/: Cargo.toml
src/napi/src/: lib.rs
(+2068 files in other folders)
