[package]
name = "bendclaw"
version = "0.1.0"
edition = "2021"

[lints.clippy]
module_inception = "allow"
should_implement_trait = "allow"
approx_constant = "allow"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
futures = "0.3"
lru = "0.12"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = "0.7"

tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sentry = { version = "0.47", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "0.47"
ulid = "1"
tiktoken-rs = "0.6"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
cron = { version = "0.15", features = ["serde"] }
dotenvy = "0.15"
flate2 = "1"
tar = "0.4"
native-tls = "0.2.18"
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.14.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
live-tests = []

[dev-dependencies]
bendclaw = { path = "." }
bendclaw-test-harness = { path = "crates/test-harness" }
chrono = "0.4"
databend-common-ast = "0.2.5"
fs2 = "0.4"
insta = { version = "1", features = ["json", "yaml", "redactions"] }
tempfile = "3"
tower = "0.5"

[[test]]
name = "unit"
path = "tests/unit/main.rs"

[[test]]
name = "it"
path = "tests/it/main.rs"

[[test]]
name = "live-storage-contract"
path = "tests/live_storage_contract/main.rs"
required-features = ["live-tests"]

[[test]]
name = "live-api-e2e"
path = "tests/live_api_e2e/main.rs"
required-features = ["live-tests"]

[[test]]
name = "contract"
path = "tests/contract/main.rs"

[build-dependencies]
chrono = "0.4"
