[workspace]
members = ["crates/open-agent-sdk"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
open-agent-sdk = { path = "crates/open-agent-sdk" }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = "1"

[package]
name = "bendclaw"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bendclaw"
path = "src/bin/bendclaw.rs"

[dependencies]
open-agent-sdk.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.clippy]
module_inception = "allow"
should_implement_trait = "allow"
approx_constant = "allow"

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml", "redactions"] }
tempfile = "3"

[[test]]
name = "unit"
path = "tests/unit/main.rs"

[[test]]
name = "it"
path = "tests/it/main.rs"

[[test]]
name = "contract"
path = "tests/contract/main.rs"

[build-dependencies]
chrono = "0.4"
