[workspace]
members = ["src/engine", "src/app", "src/napi"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
bend-engine = { path = "src/engine", package = "bendengine" }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
similar = "2.4"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = "1"
uuid = { version = "1", features = ["v4", "v7"] }
readability = "0.3"
htmd = "0.5"
headless_chrome = "1.0"
html2text = "0.13"
