[package]
name = "bendclaw-test-harness"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bendclaw = { path = "../.." }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
insta = { version = "1", features = ["json", "yaml", "redactions"] }
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
ulid = "1"
