[package]
name = "bendclaw"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bendclaw"
path = "src/bin/bendclaw.rs"

[dependencies]
bend-base.workspace = true
bend-agent.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.28"
futures.workspace = true
ratatui = "0.29"
serde.workspace = true
serde_ignored.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width = "0.2"
uuid.workspace = true

[lints.clippy]
module_inception = "allow"
should_implement_trait = "allow"
approx_constant = "allow"

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml", "redactions"] }
tempfile = "3"

[build-dependencies]
chrono = "0.4"
