[package]
name = "bendclaw"
version.workspace = true
edition.workspace = true
repository = "https://github.com/evotai/bendclaw"

[[bin]]
name = "bendclaw"
path = "src/bin/bendclaw.rs"

[dependencies]
bend-base.workspace = true
bend-engine.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.28"
futures.workspace = true
parking_lot.workspace = true
ratatui = "0.29"
rustyline = "15"
similar = { workspace = true }
serde.workspace = true
serde_ignored.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width = "0.2"
uuid.workspace = true
streamdown-parser = "0.1.4"
streamdown-core = "0.1.4"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
terminal_size = "0.4"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "bin/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[lints.clippy]
module_inception = "allow"
should_implement_trait = "allow"
approx_constant = "allow"

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml", "redactions"] }

[build-dependencies]
chrono = "0.4"
