[package]
name = "bendengine"
version.workspace = true
edition.workspace = true
description = "Bend Engine - autonomous agent runtime"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"
rand = "0.8"
base64 = "0.22"
openapiv3 = { version = "2", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
openapi = ["dep:openapiv3", "dep:serde_yaml"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
wiremock = "0.6"

[lints.clippy]
module_inception = "allow"
