[package]
name = "bendengine"
version.workspace = true
edition.workspace = true
description = "Bend Engine - autonomous agent runtime"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
parking_lot = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = "0.6"
readability = { workspace = true }
htmd = { workspace = true }
futures = "0.3"
jsonrepair = "0.1"
rand = "0.8"
base64 = "0.22"
command-group = { version = "5", features = ["with-tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
wiremock = "0.6"

[lints.clippy]
module_inception = "allow"
