[package]
name = "bendengine"
version.workspace = true
edition.workspace = true
description = "Bend Engine - autonomous agent runtime"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
parking_lot = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = "0.6"
readability = { workspace = true }
htmd = { workspace = true }
futures = "0.3"
jsonrepair = "0.1"
rand = "0.8"
base64 = "0.22"
command-group = { version = "5", features = ["with-tokio"] }
headless_chrome = { workspace = true }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-lua = "0.4"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
wiremock = "0.6"
proptest = "1"

[lints.clippy]
module_inception = "allow"
