[package]
name = "evot-napi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
axum.workspace = true
evot = { path = "../app" }
evot-engine = { workspace = true }
futures.workspace = true
napi = { version = "2", features = ["async", "serde-json", "napi9"] }
napi-derive = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tracing-appender = "0.2"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
napi-build = "2"
